--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.cjj.thread2020</groupId>
     <artifactId>thread2020</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>thread01</module>
+    </modules>
     <packaging>pom</packaging>
 
 
